<resources>
    <string name="app_name">BOA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_number">561414******7477</string>
    <string name="sold">Sold</string>
    <string name="name">MR ESPERANT GADA</string>
    <string name="transfers">Transfer</string>
    <string name="model">Models</string>
    <string name="daily">Daily transfer on the GAB</string>
    <string name="value1">500 000 XOF</string>
    <string name="used0">Used</string>
    <string name="used1">0 XOF</string>
    <string name="month">Monthly transfer on the GAB</string>
    <string name="value2">1 000 000 XOF</string>
    <string name="used_1">Used</string>
    <string name="used2">85 000 XOF</string>
    <string name="lock_card">Lock the card</string>
    <string name="operations">OPERATIONS LIST</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="months">Months</string>
    <string name="version">Version: 1.24.0-SNAPSHOT</string>
    <string name="bank">BANK OF AFRICA</string>
    <string name="group">Group BM BANK</string>
    <string name="hint">Password</string>
    <string name="connection">Connect</string>
    <string name="commitment">Entering within the application, you confirm your commitment to this service general conditions</string>
    <string name="connect">Connect with another phone number</string>
    <string name="connected">Connection</string>
    <string name="agency">Agency &amp; GAB </string>
    <string name="actualities">Actualities</string>
    <string name="contacts">Contacts</string>
    <string name="info">Info</string>
    <string name="product">Our products &amp; services</string>
    <string name="num">97756877</string>
    <string name="drawer_tran">Transfer</string>
    <string name="drawer_actualities">Actualities</string>
    <string name="drawer_acc">Accounts</string>
    <string name="drawer_cont">Contacts</string>
    <string name="drawer_tools">Tools</string>
    <string name="drawer_message">Message</string>
    <string name="drawer_setting">Settings</string>
    <string name="drawer_model">Model</string>
    <string name="drawer_card">Cards</string>
    <string name="drawer_information">Information</string>
    <string name="drawer_operation">Operations</string>
    <string name="drawer_agency">Agency &amp; GAB</string>
    <string name="drawer_product">Products &amp; Services</string>
</resources>